test/associative/waynew/add_remove2.good
member((0, 0)) = false
member((2, 2)) = true
member((53, 53)) = false
member((92, 92)) = false
member((5, 5)) = true
member((6, 6)) = true
member((4, 4)) = false
member((4, 4)) = true
add_remove2.chpl:26: error: halt reached - index not in domain: (53, 0)
